polish residual files to name app Catter

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Catter",
+  "name": "Catter Redux Toolkit Example",
   "icons": [
     {
       "src": "favicon.ico",
